--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta author="Darya @qqc Baklanova">
+    <title>Тестовое задание </title>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -44,7 +49,7 @@
 
         <button ng-hide="showAdd" class="btn" ng-click="toggle()">Создать контакт</button>
         <div class="form row" ng-show="showAdd">
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-xs-12">
                 <div class="input-group">
                     <span class="input-group-addon">ФИО</span>
                     <input class="col-xs-8 form-control" type="text" id="name" ng-model="name" placeholder="ФИО" />
@@ -58,7 +63,7 @@
                     <input class="col-xs-8 form-control" type="text" id="mobile" ng-model="mobile" placeholder="Телефон" />
                 </div>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-xs-12">
                 <div class="">
                     <input type="text" id="address-input" class="form-control" ng-model="address" placeholder="Адрес" />
                 </div>
@@ -70,16 +75,34 @@
             <input class="form-control" ng-model="searchText">
         </div>
         <div class="contact row" ng-repeat="contact in list | filter:searchText">
-            <div class="left col-sm-6">
+            <div class="left col-sm-6 col-xs-12">
                 <input class="col-xs-12 form-control" type="text" placeholder="ФИО" ng-value="contact.name" />
                 <input class="col-xs-12 form-control" type="text" placeholder="E-mail" value="{{contact.email}}" />
                 <input class="col-xs-12 form-control" type="text" placeholder="Телефон" value="{{contact.mobile}}" />
 
             </div>
-            <div class="right col-sm-6">
+            <div class="right col-sm-6 col-xs-12">
                 <input class="col-xs-12 form-control" type="text" placeholder="Адрес" value="{{contact.address}}" />
 
-                <button type="button" class="close" ng-click="delete(contact)"><i class="glyphicon glyphicon-remove"></i></button>
+                <button type="button" class="close" data-toggle="modal" data-target="#modal-{{contact.email | limitTo: 5}}"><i class="glyphicon glyphicon-remove"></i></button>
+
+                <div class="modal fade" id="modal-{{contact.email | limitTo: 5}}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+                    <div class="modal-dialog modal-sm" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title" id="gridSystemModalLabel">Удалить контакт</h4>
+                            </div>
+                            <div class="modal-body">
+                                <p>Вы уверены, что хотите удалить контакт <b>{{contact.name}}?</b></p>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">Отменить</button>
+                                <button style="background-color: #337ab7;" type="button" class="btn btn-primary" ng-click="delete(contact);hideModal();">Удалить</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
