--- a/index.html
+++ b/index.html
@@ -2,110 +2,103 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="utf-8">
-    <meta author="Darya @qqc Baklanova">
-    <title>Тестовое задание </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta charset="utf-8">
+	<meta author="Darya @qqc Baklanova">
+	<title>Тестовое задание </title>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-touch.min.js"></script>
-
-    <script src="app.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.8/angular.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-touch.min.js"></script>
+	<script src="ngstr.js"></script>
+	<script src="app.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body ng-app="contactsApp">
 
-    <div class="container" ng-app="ContactsApp" ng-init="list=[
-            {
-        name: 'Иванов Иван Иванович',
-        email: 'ivanov@mail.ru',
-        mobile: '+79998881111',
-        address: 'г. Томск, ул. Шишкова, д. 13, офис 307'
-    }, {
-        name: 'Ольгова Лариса Ивановна',
-        email: 'olgova@mail.ru',
-        mobile: '+79998881111',
-        address: 'г. Томск, ул. Шишкова, д. 13, офис 307'
-    }, {
-        name: 'Николаев Михаил Николаевич',
-        email: 'nikolaev@mail.ru',
-        mobile: '+79998881111',
-        address: 'г. Томск, ул. Шишкова, д. 13, офис 307'
-    }, {
-        name: 'Бондарчук Богдан Тихомирович',
-        email: 'bondarchuk@mail.ru',
-        mobile: '+79998881111',
-        address: 'г. Томск, ул. Шишкова, д. 13, офис 307'
-    }]" ng-controller="contactController">
+	<div class="container" ng-controller="contactsCtrl">
 
 
-        <button ng-hide="showAdd" class="btn" ng-click="toggle()">Создать контакт</button>
-        <div class="form row" ng-show="showAdd">
-            <div class="col-sm-6 col-xs-12">
-                <div class="input-group">
-                    <span class="input-group-addon">ФИО</span>
-                    <input class="col-xs-8 form-control" type="text" id="name" ng-model="name" placeholder="ФИО" />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon">E-mail</span>
-                    <input class="col-xs-8 form-control" type="text" id="email" ng-model="email" placeholder="E-mail" />
-                </div>
-                <div class="input-group">
-                    <span class="input-group-addon">Телефон</span>
-                    <input class="col-xs-8 form-control" type="text" id="mobile" ng-model="mobile" placeholder="Телефон" />
-                </div>
-            </div>
-            <div class="col-sm-6 col-xs-12">
-                <div class="">
-                    <input type="text" id="address-input" class="form-control" ng-model="address" placeholder="Адрес" />
-                </div>
-            </div>
-            <button class="btn save-button" ng-click="add(); toggle();">Сохранить</button>
-        </div>
-        <div class="search input-group">
-            <span class="input-group-addon">Поиск</span>
-            <input class="form-control" ng-model="searchText">
-        </div>
-        <div class="contact row" ng-repeat="contact in list | filter:searchText">
-            <div class="left col-sm-6 col-xs-12">
-                <input class="col-xs-12 form-control" type="text" placeholder="ФИО" ng-value="contact.name" />
-                <input class="col-xs-12 form-control" type="text" placeholder="E-mail" value="{{contact.email}}" />
-                <input class="col-xs-12 form-control" type="text" placeholder="Телефон" value="{{contact.mobile}}" />
+		<button ng-hide="showAdd" class="btn" ng-click="toggle()">Создать контакт</button>
+		<div class="form row" ng-show="showAdd">
+			<div class="col-sm-6 col-xs-12">
+				<div class="input-group">
+					<span class="input-group-addon">ФИО</span>
+					<input class="col-xs-8 form-control" type="text" id="name" ng-model="name" placeholder="ФИО" />
+				</div>
+				<div class="input-group">
+					<span class="input-group-addon">E-mail</span>
+					<input class="col-xs-8 form-control" type="text" id="email" ng-model="email" placeholder="E-mail" />
+				</div>
+				<div class="input-group">
+					<span class="input-group-addon">Телефон</span>
+					<input class="col-xs-8 form-control" type="text" id="mobile" ng-model="mobile" placeholder="Телефон" />
+				</div>
+			</div>
+			<div class="col-sm-6 col-xs-12">
+				<div class="">
+					<input type="text" id="address-input" class="form-control" ng-model="address" placeholder="Адрес" />
+				</div>
+			</div>
+			<button class="btn save-button" ng-click="add(); toggle();">Сохранить</button>
+		</div>
+		<div class="search input-group">
+			<span class="input-group-addon">Поиск</span>
+			<input class="form-control" ng-model="searchText">
+		</div>
+		<div class="contact row" ng-repeat="contact in contacts | filter:searchText">
+			<div>
+				<div class="left col-sm-6 col-xs-12">
+					<div ng-click="editNameMode = true">
+						<p ng-show="!editNameMode">{{contact.name}}</p>
+					</div>
+					<input ng-show="editNameMode" ng-blur="editNameMode = false; saveChanges();" class="col-xs-12 form-control" type="text" placeholder="ФИО" ng-model="contact.name" />
+					<div ng-click="editEmailMode = true">
+						<p ng-show="!editEmailMode">{{contact.email}}</p>
+					</div>
+					<input ng-show="editEmailMode" ng-blur="editEmailMode = false; saveChanges();" class="col-xs-12 form-control" type="text" placeholder="Email" ng-model="contact.email" />
+					<div ng-click="editMobileMode = true">
+						<p ng-show="!editMobileMode">{{contact.mobile}}</p>
+					</div>
+					<input ng-show="editMobileMode" ng-blur="editMobileMode = false; saveChanges();" class="col-xs-12 form-control" type="text" placeholder="Телефон" ng-model="contact.mobile" />
+				</div>
+				<div class="right col-sm-6 col-xs-12">
+					<div ng-click="editAddressMode = true">
+						<p ng-show="!editAddressMode">{{contact.address}}</p>
+					</div>
+					<div>
+						<input ng-show="editAddressMode" ng-blur="editAddressMode = false; saveChanges();" class="col-xs-12 form-control" type="text" placeholder="Адрес" ng-model="contact.address" />
+					</div>
+					<button type="button" class="close" data-toggle="modal" data-target="#modal-{{contact.email | limitTo: 5}}"><i class="glyphicon glyphicon-remove"></i></button>
 
-            </div>
-            <div class="right col-sm-6 col-xs-12">
-                <input class="col-xs-12 form-control" type="text" placeholder="Адрес" value="{{contact.address}}" />
-
-                <button type="button" class="close" data-toggle="modal" data-target="#modal-{{contact.email | limitTo: 5}}"><i class="glyphicon glyphicon-remove"></i></button>
-
-                <div class="modal fade" id="modal-{{contact.email | limitTo: 5}}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-                    <div class="modal-dialog modal-sm" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title" id="gridSystemModalLabel">Удалить контакт</h4>
-                            </div>
-                            <div class="modal-body">
-                                <p>Вы уверены, что хотите удалить контакт <b>{{contact.name}}?</b></p>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Отменить</button>
-                                <button style="background-color: #337ab7;" type="button" class="btn btn-primary" ng-click="delete(contact);hideModal();">Удалить</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+					<div class="modal fade" id="modal-{{contact.email | limitTo: 5}}" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+						<div class="modal-dialog modal-sm" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+									<h4 class="modal-title" id="gridSystemModalLabel">Удалить контакт</h4>
+								</div>
+								<div class="modal-body">
+									<p>Вы уверены, что хотите удалить контакт <b>{{contact.name}}?</b></p>
+								</div>
+								<div class="modal-footer">
+									<button type="button" class="btn btn-default" data-dismiss="modal">Отменить</button>
+									<button style="background-color: #337ab7;" type="button" class="btn btn-primary" ng-click="delete(contact);hideModal();">Удалить</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </body>
 
 </html>
